Overhaul all repo methods wrt entity graph annotation and corresponding service methods Rename stuff in controller